# nvidia-api-playground

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: nvidia-nim-api-guide.md  nvidia-nim-api-reference.md
src/nvidia/llm/: chat.py  models.py  tui.py
src/nvidia/trellis/: preview.py  preview_tui.py  render_test.py  text_to_glb.py  tui.py
trellis_nvidia/: __init__.py  __main__.py  cli.py  flower_to_glb.py  text_to_glb.py
