[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trellis-nvidia"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
trellis-nvidia = "trellis_nvidia.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trellis_nvidia*"]
